--- a/css/scrollefects.css
+++ b/css/scrollefects.css
@@ -1,4 +1,4 @@
-        body {
+        .body {
             background-color: #2c3e50;
             color: white;
             font-family: Arial, sans-serif;
@@ -8,27 +8,27 @@
             margin-top: 50px;
         }
 
-        table {
+        .table {
             width: 100%;
             margin-bottom: 50px;
             border-collapse: collapse;
         }
 
-        th,
-        td {
+        .th,
+        .td {
             padding: 15px;
             text-align: left;
         }
 
-        th {
+        .th {
             background-color: #34495e;
         }
 
-        tr:nth-child(even) {
+        .tr:nth-child(even) {
             background-color: #2c3e50;
         }
 
-        tr:hover {
+        .tr:hover {
             background-color: #1abc9c;
         }
 
