--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ html[data-theme='dark'] {
 }
 
 .logo-link img {
-  width: 72px;
+  width: 15px;
 }
 
 .main-nav-link {
@@ -224,6 +224,9 @@ html[data-theme='dark'] {
 
 .skills-icon {
   color: var(--color-on-surface-variant);
+}
+.skills-icon img {
+  width: 1px;
 }
 
 .other-skills-box {
@@ -404,3 +407,5 @@ footer .social-links {
 #eula-list li a:hover {
   color: var(--color-primary); 
 }
+
+
