--- a/css/styles.css
+++ b/css/styles.css
@@ -363,17 +363,57 @@ html[data-theme='dark'] {
   width: 80%;
   margin: 0 auto;
 }
-/************* CONTACT SECTION **************/
+/************* CONTACT SECTION and footer **************/
 
 .section-footer {
-  padding-top: 4.8rem;
-  margin-bottom: 1.2rem;
+  background: #333;
+  /* Color de fondo */
+  color: #fff;
+  /* Color del texto */
+  padding: 2rem 0;
+  /* Espaciado */
 }
 
-footer .social-links {
-  width: 50%;
+.containerfooter {
+  max-width: 600px;
+  /* Ancho máximo */
   margin: 0 auto;
-  transition: width 0.4s;
+  /* Centrado */
+  padding: 0 2rem;
+  /* Espaciado interno */
+  display: flex;
+  /* Flexbox */
+  justify-content: space-around;
+  /* Espacio entre elementos */
+  align-items: center;
+  /* Alineación vertical */
+  flex-wrap: wrap;
+  /* Ajuste de elementos */
+}
+
+.footer-nav {
+  display: flex;
+  /* Flexbox */
+  align-items: center;
+  /* Alineación vertical */
+}
+
+
+
+.nav-list li a:hover {
+  color: #aaa;
+  /* Color al pasar el ratón */
+}
+
+
+/* Estilo para pantallas pequeñas */
+@media (max-width: 768px) {
+  .containerfooter {
+    flex-direction: column;
+    /* Elementos en columna */
+    text-align: center;
+    /* Texto centrado */
+  }
 }
 
 .copyright {
