--- a/css/general.css
+++ b/css/general.css
@@ -348,3 +348,38 @@ section:hover {
     box-shadow: 0px 0px 15px 5px rgba(183, 183, 234, 0.5), 0px 5px 10px 5px rgba(0, 0, 255, 0.3);
 }
 
+/* Animación slide-in */
+@keyframes slidein {
+    from {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.slide-in {
+    animation: slidein 1s ease-out;
+}
+
+/* Corrección de desbordamiento en la sección de BI */
+#proyectos .project {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+/* Estilo para contenedor de proyectos */
+.project {
+    margin-bottom: 2rem;
+}
+.iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
