--- a/css/generalcopy - copia.css
+++ b/css/generalcopy - copia.css
@@ -80,6 +80,7 @@ li {
         transform: translate(10rem);
         opacity: 0;
     }
+
     100% {
         transform: translate(0);
         opacity: 1;
@@ -204,8 +205,8 @@ li {
 /* ********** HEADINGS *********** */
 
 .heading-primary {
-    font-weight: 600;
-    font-size: 5.2rem;
+    font-weight: 400;
+    font-size: 3.2rem;
     line-height: 1.1;
     letter-spacing: 3px;
     color: var(--color-primary);
@@ -253,7 +254,7 @@ li {
 }
 
 .side-social-links--left {
-    left: 4rem;
+    left: 8rem;
     right: auto;
 }
 
@@ -270,6 +271,7 @@ li {
 .side-social-links--rigth a:hover,
 .side-social-links--rigth a:active {
     transform: translateY(-3px);
+    
 }
 
 .social-links {
@@ -283,13 +285,19 @@ li {
     flex-direction: column;
 }
 
+.social-links--side img {
+    width: 100px;
+    height: 50px;
+}
+
+
 .social-links--side::after {
     content: "";
     display: block;
     width: 1px;
-    height: 15rem;
+    height: 10rem;
     margin: 0 auto;
-    background-color: var(--color-tertiary);
+        color: var(--color-primary);
 }
 
 .social-link {
@@ -297,9 +305,14 @@ li {
 }
 
 .social-icon {
-    font-size: 1.4rem;
+    font-size: 5.4rem;
     color: var(--color-secondary);
     transition: transform 0.3s;
+}
+
+.social-icon img {
+    width: 100px;
+    height: 50px;
 }
 
 .social-icon:hover,
@@ -354,6 +367,7 @@ section:hover {
         opacity: 0;
         transform: translateX(-100%);
     }
+
     to {
         opacity: 1;
         transform: translateX(0);
@@ -375,6 +389,7 @@ section:hover {
 .project {
     margin-bottom: 2rem;
 }
+
 .iframe-container iframe {
     position: absolute;
     top: 0;
