--- a/css/general.css
+++ b/css/general.css
@@ -57,7 +57,7 @@ li {
 }
 
 .image-container:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     background-image: url("images/work/feproceso.web");
     /* Aumenta el tamaño al pasar el mouse */
 }
@@ -80,6 +80,7 @@ li {
         transform: translate(10rem);
         opacity: 0;
     }
+
     100% {
         transform: translate(0);
         opacity: 1;
@@ -276,7 +277,7 @@ li {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 1.5rem;
+    gap: 15rem;
 }
 
 .social-links--side {
@@ -354,6 +355,7 @@ section:hover {
         opacity: 0;
         transform: translateX(-100%);
     }
+
     to {
         opacity: 1;
         transform: translateX(0);
@@ -365,7 +367,7 @@ section:hover {
 }
 
 /* Corrección de desbordamiento en la sección de BI */
-#proyectos .project {
+#proyectos {
     max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -375,6 +377,7 @@ section:hover {
 .project {
     margin-bottom: 2rem;
 }
+
 .iframe-container iframe {
     position: absolute;
     top: 0;
