--- a/css/generalcopy - copia.css
+++ b/css/generalcopy - copia.css
@@ -285,9 +285,9 @@ li {
     flex-direction: column;
 }
 
-.social-links--side img {
-    width: 100px;
-    height: 50px;
+.social-links img {
+    width: 20px;
+    height: 20px;
 }
 
 
@@ -295,7 +295,7 @@ li {
     content: "";
     display: block;
     width: 1px;
-    height: 10rem;
+    height: 8rem;
     margin: 0 auto;
         color: var(--color-primary);
 }
@@ -305,14 +305,15 @@ li {
 }
 
 .social-icon {
-    font-size: 5.4rem;
+    font-size: 2.4rem;
     color: var(--color-secondary);
-    transition: transform 0.3s;
+   
 }
 
 .social-icon img {
-    width: 100px;
-    height: 50px;
+    width: 20px;
+    height: 20px;
+    
 }
 
 .social-icon:hover,
