--- a/css/queries.css
+++ b/css/queries.css
@@ -24,7 +24,7 @@
         display: block;
     }
     .description-box {
-        width: 85%;
+        width: 75%;
     }
     .about-box {
         grid-template-columns: 1fr 1fr;
@@ -66,7 +66,7 @@
         column-gap: 0.8rem;
     }
     .works-container {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 2fr ;
         gap: 2.4rem 9.6rem;
     }
 }
@@ -106,6 +106,7 @@
     html {
         font-size: 56.25%;
     }
+    
 }
 
 
@@ -114,5 +115,17 @@
 @media (max-width: 21.25em) {
     html {
         font-size: 50%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .works-container {
+        grid-template-columns: 2fr;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .works-container {
+        grid-template-columns: 2fr;
     }
 }
