--- a/css/movimiento_skills.css
+++ b/css/movimiento_skills.css
@@ -1,9 +1,8 @@
-
-#movimiento_skills{
+#movimiento_skills {
     background-image: url('./images/logo.webp');
     background-size: cover;
     border-radius: 20%;
-    padding: 50px 0;
+    padding: 100px 0;
     perspective: 1000px;
     text-align: center;
     justify-content: center;
@@ -29,16 +28,15 @@
 
 .movimiento_skills-grid-skill {
     position: absolute;
-    width: 80px;
-    height: 80px;
+
     transition: transform 0.3s;
     transform-style: preserve-3d;
 }
 
 
 .movimiento_skills-grid-skill img {
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
 
 }
 
@@ -48,24 +46,23 @@
     left: 50%;
     transform: translateX(-50%);
     background-color: inherit;
-    color:var(--color-primary);
+    color: white;
     padding: 5px;
-    border-radius: 5px;
-    opacity: 0.9;
+    border-radius: 20%;
+    opacity: 1;
     transition: opacity 0.3s;
     pointer-events: none;
-    font-size: 8px;
+    font-size: 10px;
 }
 
-.movimiento_skills-grid-skill img:hover  {
+.movimiento_skills-grid-skill:hover {
     opacity: 1;
-   color: #000;
+    color: var(--color-primary);
+    background-color: var(--color-primary);
 }
 
-.movimiento_skills-grid-skill-tooltip:hover  {
-    opacity: 1;
-   color: #000;
+.movimiento_skills-grid-skill-tooltip:hover {
+    opacity: 0.7;
+    color: #000;
+    background-color: var(--color-primary);
 }
-
-
-
