--- a/css/general.css
+++ b/css/general.css
@@ -53,6 +53,7 @@ li {
     position: relative;
     display: inline-block;
     transition: transform 0.3s ease;
+    align-items: start;
     /* Agrega una transición suave */
 }
 
