--- a/css/styles.css
+++ b/css/styles.css
@@ -199,6 +199,8 @@ html[data-theme="dark"] {
     justify-content: stretch;
 }
 
+/************* bi SECTION **************/
+
 /************* CONTACT SECTION **************/
 
 .section-contact {
