--- a/css/general.css
+++ b/css/general.css
@@ -19,94 +19,98 @@ Medium: 8px
 */
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: var(--body-font);
-    font-weight: 400;
-    font-size: 1.8rem;
-    background-color: var(--color-surface);
-    color: var(--color-on-surface);
-    overflow-x: hidden;
-    transition: background-color 0.9s, color 0.3s;
-    /* Transiciones para tema claro/oscuro */
+  font-family: var(--body-font);
+  font-weight: 400;
+  font-size: 1.8rem;
+  background-color: var(--gradiente-blue);
+  background-image:url(../images/background/bk.jpg);
+  color: var(--color-on-surface);
+  overflow-x: hidden;
+  transition: background-color 0.9s, color 0.3s;
+  /* Transiciones para tema claro/oscuro */
+  background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
+  background-repeat: no-repeat;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 .container {
-    max-width: 180rem;
-    width: 100%;
-    margin: 0 auto;
+  max-width: 180rem;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .image-container {
-    position: relative;
-    display: inline-block;
-    transition: transform 0.3s ease;
-    align-items: start;
-    /* Agrega una transición suave */
+
+  transition: transform 0.8s ease;
+  align-items: stretch;
+  justify-content: space-evenly;
+  /* Agrega una transición suave */
 }
 
 .image-container:hover {
-    transform: scale(1.1);
-    background-image: url("images/work/feproceso.web");
-    /* Aumenta el tamaño al pasar el mouse */
+  transform: scale(1.1);
+  background-image: url("images/work/feproceso.web");
+  /* Aumenta el tamaño al pasar el mouse */
 }
 
 .container-md {
-    max-width: 78%;
-    width: 90%;
-    margin: 0 auto;
+  max-width: 78%;
+  width: 90%;
+  margin: 0 auto;
 }
 
 
 /* ANIMATION */
 
 .slide-left {
-    animation: slideleft 1s linear forwards;
+  animation: slideleft 1s linear forwards;
 }
 
 @keyframes slideleft {
-    0% {
-        transform: translate(10rem);
-        opacity: 0;
-    }
+  0% {
+    transform: translate(10rem);
+    opacity: 0;
+  }
 
-    100% {
-        transform: translate(0);
-        opacity: 1;
-    }
+  100% {
+    transform: translate(0);
+    opacity: 1;
+  }
 }
 
 .description-box.slide-left {
-    animation-delay: 1s;
+  animation-delay: 1s;
 }
 
 .section--hidden {
-    opacity: 0;
-    transform: translateY(8rem);
+  opacity: 0;
+  transform: translateY(8rem);
 }
 
 .padd-section {
-    padding: 9.6rem 0;
+  padding: 9.6rem 0;
 }
 
 
 /* TEXT */
 
 .text {
-    font-size: 1.8rem;
-    line-height: 1.8;
+  font-size: 1.8rem;
+  line-height: 1.8;
 }
 
 
@@ -116,18 +120,24 @@ li {
 /* FLEX */
 
 .flex-row {
-    display: flex;
+  display: flex;
 }
 
 .flex-row-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .flex-col {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+}
+
+.flex__col__center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 
@@ -135,32 +145,32 @@ li {
 
 .link:link,
 .link:visited {
-    display: inline-block;
-    text-decoration: none;
-    transition: all 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  transition: all 0.3s;
 }
 
 .link:hover,
 .link:active {
-    color: var(--color-primary);
+  color: var(--color-primary);
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .nav-icon {
-    font-size: 2.6rem;
-    color: #fff;
+  font-size: 2.6rem;
+  color: #fff;
 }
 
 .nav-icon:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .nav-icon[name="close-outline"],
 .nav-icon[name="menu-outline"] {
-    color: var(--color-on-surface-variant);
+  color: var(--color-on-surface-variant);
 }
 
 
@@ -169,79 +179,100 @@ li {
 .btn,
 .btn:link,
 .btn:visited {
-    cursor: pointer;
-    display: inline-block;
-    padding: 1rem 3rem;
-    color: var(--color-primary);
-    border-radius: var(--border-radius-sm);
-    border: 2px solid;
-    transition: all 0.4s;
+  cursor: pointer;
+  display: inline-block;
+  padding: 1rem 3rem;
+  color: var(--color-primary);
+  border-radius: var(--border-radius-sm);
+  border: 2px solid;
+  transition: all 0.4s;
 }
 
 .btn-outline:link,
 .btn-outline:visited {
-    border-color: var(--color-primary);
+  border-color: var(--color-primary);
 }
 
 .btn-outline:hover,
 .btn-outline:active {
-    color: #fff;
-    background-color: var(--color-primary);
+  color: #fff;
+  background-color: var(--color-primary);
 }
 
 .btn-full:link,
 .btn-full:visited {
-    color: var(--color-surface);
-    background-color: var(--color-primary);
-    border-color: var(--color-primary);
+  color: var(--color-surface);
+  background-color: var(--color-primary);
+  border-color: var(--color-primary);
 }
 
 .btn-full:hover,
 .btn-full:active {
-    background-color: var(--color-on-primary-container);
-    border-color: var(--color-on-primary-container);
+  background-color: var(--color-on-primary-container);
+  border-color: var(--color-on-primary-container);
 }
 
 
 /* ********** HEADINGS *********** */
 
+
+
+.enter-text {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
 .heading-primary {
-    font-weight: 600;
-    font-size: 5.2rem;
-    line-height: 1.1;
-    letter-spacing: 3px;
-    color: var(--color-primary);
+  font-size: 3rem;
+  margin: 0;
+  transition: all 0.5s ease-in-out;
+}
+
+.heading-primary:hover {
+  font-size:4.3rem;
+  color: var(--gradiente-blue);
+  text-shadow: 4px 4px 20px rgba(154, 203, 255, 0.7);
+  background-color: var(--gradiente-blue);
 }
 
 .heading-secondary {
-    color: var(--color-primary);
-    font-size: 3rem;
-    flex: none;
+  color: var(--color-primary);
+  font-size: 3rem;
+  flex: none;
+}
+.heading-secondary:hover {
+  font-size:4.3rem;
+  color: var(--gradiente-blue);
+  text-shadow: 4px 4px 20px rgba(154, 203, 255, 0.7);
+  background-color: var(--gradiente-blue);
 }
 
 .heading-secondary span {
-    color: var(--color-secondary);
+  color: var(--color-secondary);
 }
+
+
+
 
 .heading-secondary--left,
 .heading-secondary--right {
-    display: flex;
-    align-items: center;
-    gap: 1.5rem;
-    margin-bottom: 3.2rem;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  margin-bottom: 3.2rem;
 }
 
 .heading-secondary--right {
-    justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 .heading-secondary--left::after,
 .heading-secondary--right::before {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: var(--color-tertiary);
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: var(--color-tertiary);
 }
 
 
@@ -249,141 +280,132 @@ li {
 
 .side-social-links--left,
 .side-social-links--rigth {
-    display: none;
-    position: fixed;
-    bottom: 0;
+  display: none;
+  position: fixed;
+  bottom: 0;
 }
 
 .side-social-links--left {
-    left: 4rem;
-    right: auto;
+  left: 4rem;
+  right: auto;
 }
 
 .side-social-links--rigth {
-    right: 4rem;
-    left: auto;
+  right: 4rem;
+  left: auto;
 }
 
 .side-social-links--rigth a {
-    color: inherit;
-    writing-mode: vertical-rl;
+  color: inherit;
+  writing-mode: vertical-rl;
 }
 
 .side-social-links--rigth a:hover,
 .side-social-links--rigth a:active {
-    transform: translateY(-3px);
+  transform: translateY(-3px);
 }
 
 .social-links {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 15rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15rem;
 }
 
 .social-links--side {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .social-links--side::after {
-    content: "";
-    display: block;
-    width: 1px;
-    height: 15rem;
-    margin: 0 auto;
-    background-color: var(--color-tertiary);
+  content: "";
+  display: block;
+  width: 1px;
+  height: 15rem;
+  margin: 0 auto;
+  background-color: var(--color-tertiary);
 }
 
 .social-link {
-    padding: 0.1rem;
+  padding: 0.1rem;
 }
 
 .social-icon {
-    font-size: 1.4rem;
-    color: var(--color-secondary);
-    transition: transform 0.3s;
+  font-size: 1.4rem;
+  color: var(--color-secondary);
+  transition: transform 0.3s;
 }
 
 .social-icon:hover,
 .social-icon:active {
-    transform: translateY(-5px);
+  transform: translateY(-5px);
 }
 
 .language-selector,
 .theme-selector {
-    cursor: pointer;
-    padding: 10px;
+  cursor: pointer;
+  padding: 10px;
 }
 
 .theme-selector {
-    cursor: pointer;
-    padding: 10px;
+  cursor: pointer;
+  padding: 10px;
 }
 
 .dark-theme {
-    background-color: #2c3e50;
-    /* Color de fondo oscuro */
-    color: #ecf0f1;
-    /* Color de texto para el tema oscuro */
+  background-color: #2c3e50;
+  /* Color de fondo oscuro */
+  color: #ecf0f1;
+  /* Color de texto para el tema oscuro */
 }
 
 iframe {
-    border: none;
-    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2), 0px 5px 5px 5px rgba(0, 0, 0, 0.1);
-    transition: box-shadow 0.3s ease-in-out;
+  border: none;
+  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2), 0px 5px 5px 5px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 iframe:hover {
-    box-shadow: 0px 0px 15px 5px rgba(0, 0, 255, 0.5), 0px 5px 1px 5px rgba(0, 0, 255, 0.3);
+  box-shadow: 0px 0px 15px 5px rgba(0, 0, 255, 0.5), 0px 5px 1px 5px rgba(0, 0, 255, 0.3);
 }
 
 
 /* SECTION */
 
 section {
-    border: none;
-    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2), 0px 5px 5px 5px rgba(0, 0, 0, 0.1);
-    transition: box-shadow 0.3s ease-in-out;
+  border: none;
+  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2), 0px 5px 5px 5px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 section:hover {
-    box-shadow: 0px 0px 15px 5px rgba(183, 183, 234, 0.5), 0px 5px 10px 5px rgba(0, 0, 255, 0.3);
+  box-shadow: 0px 0px 15px 5px rgba(183, 183, 234, 0.5), 0px 5px 10px 5px rgba(0, 0, 255, 0.3);
 }
 
 /* Animación slide-in */
 @keyframes slidein {
-    from {
-        opacity: 0;
-        transform: translateX(-100%);
-    }
+  from {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
 
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 .slide-in {
-    animation: slidein 1s ease-out;
+  animation: slidein 1s ease-out;
 }
 
 /* Corrección de desbordamiento en la sección de BI */
 #proyectos {
-    max-width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* Estilo para contenedor de proyectos */
 .project {
-    margin-bottom: 2rem;
-}
-
-.iframe-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
+  margin-bottom: 2rem;
 }
