--- a/css/styles.css
+++ b/css/styles.css
@@ -1,337 +1,380 @@
 :root {
-    --color-surface: #d5dde6;
-    --color-on-surface: #1a1c1e;
-    --color-surface-variant: #dee3eb;
-    --color-on-surface-variant: #42474e;
-    --color-primary: #00629e;
-    --color-on-primary-container: #001d34;
-    --color-secondary: #526070;
-    --color-tertiary: #9acbff;
-    --color-on-tertiary-container: #8da2ee;
-    --body-font: "Roboto", sans-serif, "Montserrat", sans-serif, "Playwrite US Trad", cursive, "Roboto Condensed", sans-serif;
-    --border-radius-md: 0.8em;
-    --border-radius-sm: 0.8em;
+  /* Colores y fuentes principales */
+  --body-font: "Roboto", sans-serif, "Montserrat", sans-serif, "Playwrite US Trad", cursive, "Roboto Condensed", sans-serif;
+  --border-radius-md: 0.8em;
+  --border-radius-sm: 0.8em;
+  --color-on-primary-container: #001d34;
+  --color-on-surface: #1a1c1e;
+  --color-on-surface-variant: #42474e;
+  --color-on-tertiary-container: #8da2ee;
+  --color-primary: #00629e;
+  --color-secondary: #04182f;
+  --color-surface: #d5dde6;
+  --color-surface-variant: #dee3eb;
+  --color-tertiary: #9acbff;
+  --gradiente-blue: linear-gradient(18deg, rgba(4, 37, 78, 1) 3%, rgba(138, 84, 162, 1) 20%, rgba(89, 84, 164, 1) 60%, rgba(138, 213, 235, 1));
+
 }
 
 html[data-theme="dark"] {
-    --color-surface: #0b1e31;
-    --color-on-surface: #e2e2e5;
-    --color-surface-variant: #42474e;
-    --color-on-surface-variant: #c2c7cf;
-    --color-primary: #9acbff;
-    --color-on-primary-container: #cfe5ff;
-    --color-secondary: #bac8da;
-    --color-tertiary: #d4bee5;
-    --color-on-tertiary-container: #a9a9f9;
-    --body-font: "Roboto", sans-serif, "Montserrat", sans-serif, "Playwrite US Trad", cursive;
-    --border-radius-md: 0.4em;
-    --border-radius-sm: 0.8em;
+  /* Colores y fuentes para el tema oscuro */
+  --body-font: "Roboto", sans-serif, "Montserrat", sans-serif, "Playwrite US Trad", cursive;
+  --border-radius-md: 0.4em;
+  --border-radius-sm: 0.8em;
+  --color-on-primary-container: #cfe5ff;
+  --color-on-surface: #e2e2e5;
+  --color-on-surface-variant: #c2c7cf;
+  --color-on-tertiary-container: #a9a9f9;
+  --color-primary: hwb(211 60% 0%);
+  --color-secondary: #bac8da;
+  --color-surface: #0b1e31;
+  --color-surface-variant: #42474e;
+  --color-tertiary: #9acbff;
+  --gradiente-blue: linear-gradient(18deg, rgba(4, 37, 78, 1) 3%, rgba(138, 84, 162, 1) 20%, rgba(89, 84, 164, 1) 60%, rgba(138, 213, 235, 1));
+
+}
+
+/* **************** Colors ******************* */
+.gradient-radial {
+  background: radial-gradient(circle, #01257D, #04254e);
+}
+
+.gradient-horizontal {
+  background: conic-gradient(from 0deg,  #3498db, #01257D);
+}
+
+.gradient-diagonal {
+  background: linear-gradient(135deg, #3498db #01257D);
+}
+.diagonal-gradient {
+  background: linear-gradient(135deg, #3498db, #bdc3c7);
 }
 
 
 /* **************** HEADER ******************* */
-
-.section-header {
-    position: fixed;
-    width: 80%;
-    top: 0;
-    left: 0;
-    background-color: inherit;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    z-index: 999;
+/* Encabezado */
+.header {
+  background-color: inherit;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
 }
 
-.logo-link {
-    padding: 1rem;
+/* Logo */
+.header__logo img {
+  width: 72px;
 }
 
-.logo-link img {
-    width: 72px;
+/* Navegación */
+.header__nav {
+  display: flex;
+  align-items: center;
 }
 
-.main-nav-link {
-    text-decoration: none;
-    color: #ffffff;
-    font-weight: bold;
-    padding: 10px 15px;
-    transition: background-color 0.3s ease, color 0.3s ease;
+.header__nav-list {
+  display: flex;
+  gap: 20px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.main-nav-link:hover {
-    font-weight: bold;
+.header__nav-list li {
+  display: flex;
+  align-items: center;
 }
 
-.main-nav-link:hover span {
-    color: var(--color-secondary);
-    transition: all 0.4s;
-    font-weight: normal;
+.header__nav-list a {
+  color: #ffffff;
+  font-weight: bold;
+  text-decoration: none;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  padding: 10px 15px;
 }
 
-.nav {
-    justify-content: space-between;
-    align-items: center;
-
+.header__nav-list a:hover {
+  background-color: var(--color-primary);
+  color: rgba(0, 0, 0, 0.8);
 }
 
-.nav-menu {
+/* Iconos de menú */
+.header__nav-toggle {
+  display: none;
+}
+
+.nav-icon {
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+  .header__nav-list {
     position: fixed;
     top: -100%;
     left: 50%;
-    width: 95%;
-    background-color: (var(--color-tertiary));
+    transform: translateX(-50%);
+    background-color: var(--color-tertiary);
     border-radius: var(--border-radius-md);
-    transform: translate(-50%);
-    transition: all 0.4s;
-}
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+    transition: top 0.4s;
+    width: 90%;
+  }
 
-.nav-menu li:hover {
-    background-color: var(--color-primary);
-    color: (0, 0, 0, .8);
-}
-
-.show-menu .nav-menu {
-    top: 10%;
-}
-
-
-.nav-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 20px;
-}
-
-
-.nav-icon[name="close-outline"] {
-    display: none;
-}
-
-.show-menu .nav-icon[name="menu-outline"] {
-    display: none;
-}
-
-.show-menu .nav-icon[name="close-outline"] {
+  .header__nav-toggle {
     display: block;
+  }
+
+  .show-menu {
+    top: 10%;
+  }
+
+  .nav-icon[name="close-outline"] {
+    display: none;
+  }
+
+  .show-menu .nav-icon[name="menu-outline"] {
+    display: none;
+  }
+
+  .show-menu .nav-icon[name="close-outline"] {
+    display: block;
+  }
 }
-
-
 /* ******** HERO TITLE ********** */
-
 .section-home {
-    padding: 2rem 1rem;
-    height: 100vh;
-    width: 100%;
-}
-
-.hero {
-    color: var(--color-on-surface);
+  height: 100vh;
+  padding: 2rem 1rem;
+  width: 100%;
 }
 
 .hero-text-box {
-    gap: 3rem;
+  gap: 3rem;
+  margin: 2rem,2rem;
 }
 
 .hero-main-title-box {
-    font-size: 2rem;
+  font-size: 2rem;
+  margin: 2rem,2rem;
+  gap: 3rem;
 }
+
 
 .enter-text {
-    font-size: 2.6rem;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
 
+
+
 .hero-subheading {
-    margin-top: 1rem;
-    font-weight: 400;
-    color: var(--color-secondary);
+  font-size: 1.2rem;
+ 
+  margin: 2rem,2rem;
+  padding: 2rem,2rem;
+  position: relative;
+  transition: all 8s;
+  text-align: right;
+  gap: initial;
 }
 
 .animate-subheading {
-    color: var(--color-primary);
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  left: 0;
+  text-align: right;
+  animation: changeText 8s infinite;
+}
+
+
+
+@keyframes changeText {
+  0%, 33.33%, 100% {
+    opacity: 0;
+  }
+  16.66%, 49.99% {
+    opacity: 0.9;
+  }
 }
 
 .description-box {
-    padding: 0.5rem 0;
-    opacity: 0;
-    /* For the animation */
+  opacity: 0;
+  /* Para la animación */
+  padding: 0.5rem 0;
 }
 
 .description-box a {
-    margin-top: 2.4rem;
+  margin-top: 2.4rem;
 }
 
-
 /************* ABOUT SECTION **************/
-
 .section-about {
-    padding: 9rem 1rem;
-
+  padding: 9rem 1rem;
 }
 
 .about-box-text .link {
-    margin-top: 3.5rem;
+  margin-top: 3.5rem;
 }
 
-
 .about-box-img {
-    width: 100%;
-    border-radius: var(--border-radius-md);
+  border-radius: var(--border-radius-md);
+  width: 100%;
 }
 
 .about-box {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    gap: 1rem;
+  align-items: flex-end;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
 }
-
 
 .about-text,
 .about-skills {
-    flex: 1;
-    padding: 20px;
-    font-stretch: expanded;
-    text-align: justify;
+  flex: 1;
+  font-stretch: expanded;
+  padding: 20px;
+  text-align: justify;
 }
 
 .about-skills {
-    display: flex;
-    justify-content: stretch;
+  display: flex;
+  justify-content: stretch;
 }
 
-/************* bi SECTION **************/
-
 /************* CONTACT SECTION **************/
-
 .section-contact {
-    padding: 9.6rem 0 0 0;
+  padding: 9.6rem 0 0 0;
 }
 
 .contact-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1.6rem;
-    text-align: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  text-align: center;
 }
 
 .contact-title {
-    color: var(--color-primary);
-    font-size: 3.6rem;
-    font-weight: 600;
-    margin-bottom: 1.2rem;
+  color: var(--color-primary);
+  font-size: 3.6rem;
+  font-weight: 600;
+  margin-bottom: 1.2rem;
 }
 
 .contact-info-container:first-child {
-    width: 70%;
-    margin: 0 auto;
+  margin: 0 auto;
+  width: 70%;
 }
 
 .contact-info-container .text {
-    width: 80%;
-    margin: 0 auto;
+  margin: 0 auto;
+  width: 80%;
 }
 
-
 .section-footer {
-    padding-top: 3.8rem;
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
+  padding-top: 3.8rem;
 }
 
 .footer-social-links {
-    width: 40%;
-    margin: 0 auto;
-    transition: width 0.4s;
+  margin: 0 auto;
+  transition: width 0.4s;
+  width: 40%;
 }
 
 .copyright {
-    margin-top: 4.8rem;
-    text-align: center;
+  margin-top: 4.8rem;
+  text-align: center;
 }
 
 #eula-list {
-    list-style: none;
-    padding: 0;
-    text-align: center;
+  list-style: none;
+  padding: 0;
+  text-align: center;
 }
 
 #eula-list li {
-    display: inline-block;
-    margin-right: 5px;
-    border-right: 1px solid #000;
-    padding-right: 5px;
-    font-size: small;
+  border-right: 1px solid #000;
+  display: inline-block;
+  font-size: small;
+  margin-right: 5px;
+  padding-right: 5px;
 }
 
 #eula-list li a {
-    text-decoration: none;
-    color: inherit;
-    transition: color 0.3s;
+  color: inherit;
+  text-decoration: none;
+  transition: color 0.3s;
 }
 
 #eula-list li:last-child {
-    border-right: none;
+  border-right: none;
 }
 
 #eula-list li a:hover {
-    color: var(--color-primary);
+  color: var(--color-primary);
 }
 
+/* Fuentes adicionales */
 .roboto-condensed-con {
-    font-family: "Roboto Condensed", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 200;
-    font-style: normal;
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-weight: 200;
 }
 
 .playwrite-us-trad-u {
-    font-family: "Playwrite US Trad", cursive;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
+  font-family: "Playwrite US Trad", cursive;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-weight: 400;
 }
 
 .roboto-thin {
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: normal;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 100;
 }
 
-
-
-
-
 /* Aplicar animación al cargar la sección */
-
 .star {
-    position: absolute;
-    width: 2px;
-    height: 2px;
-    background-color: #fff;
-    /* Color de las estrellas */
-    animation: twinkle 5s infinite alternate;
+  animation: twinkle 5s infinite alternate;
+  background-color: #fff;
+  /* Color de las estrellas */
+  height: 2px;
+  position: absolute;
+  width: 2px;
 }
 
 @keyframes twinkle {
-    0% {
-        opacity: 0;
-        transform: translateY(0);
-    }
+  0% {
+    opacity: 0;
+    transform: translateY(0);
+  }
 
-    100% {
-        opacity: 1;
-        transform: translateY(-100vh);
-    }
+  100% {
+    opacity: 1;
+    transform: translateY(-100vh);
+  }
 }
 
 @keyframes fadeInLeft {
-    from {
-        opacity: 0;
-        transform: translateX(-20px);
-    }
+  from {
+    opacity: 0;
+    transform: translateX(-20px);
+  }
 
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
